# AndroidAudio

apks/AudioTrack/debug/: output-metadata.json
apks/sles/release/: output-metadata.json
app/: build.gradle
app/src/androidTest/java/com/shiva1422/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  myapplication.cpp
app/src/main/cpp/AudioPlayer/: AAudioRenderer.cpp  AAudioRenderer.h  AudioTrackRenderer.cpp  AudioTrackRenderer.h  CMakeLists.txt  IPlayer.h  OboeAudioRenderer.cpp  OboeAudioRenderer.h  Player.cpp  Player.h  SLESAudioRenderer.cpp  SLESAudioRenderer.h
app/src/main/java/com/shiva1422/myapplication/: AudioPlayer.java  AudioTrackRenderer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/shiva1422/myapplication/: ExampleUnitTest.java
